@@ -1,5 +1,12 @@
 2008-11-04  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodememberaccessmodule.vala:
+	* gobject/valagsignalmodule.vala:
+
+	Move signal emission to GSignalModule
+
+2008-11-04  Jürg Billeter  <j@bitron.ch>
+
 	* gobject/valaccodebasemodule.vala:
 	* gobject/valaccodedelegatemodule.vala:
 
